...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#fff"
        app:cardCornerRadius="2dp"
        app:contentPadding="10dp">
        <RelativeLayout
...
